--- a/package.xml
+++ b/package.xml
@@ -16,7 +16,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>gnd_geometry2d_msgs</build_depend>
+  <build_depend>gnd_msgs</build_depend>
   <build_depend>gndlib</build_depend>
   <build_depend>gnd_rosutil</build_depend>
   <build_depend>message_generation</build_depend>
@@ -24,7 +24,7 @@
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
-  <run_depend>gnd_geometry2d_msgs</run_depend>
+  <run_depend>gnd_msgs</run_depend>
   <run_depend>gndlib</run_depend>
   <run_depend>gnd_rosutil</run_depend>
   <run_depend>message_runtime</run_depend>
